# StreamKit

./: .gitignore  Corpus.xml  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  LICENSE  LoadFolders.xml  README.md  StreamKit.sln  StreamKit.sln.DotSettings  StreamKit.slnx  StreamKit.slnx.DotSettings  docker-compose.yml  nuget.config  pyproject.toml
.run/: Consolidate Assemblies.run.xml  Deploy StreamKit.run.xml  Ensure Active.run.xml  Un-Nest Assemblies.run.xml
About/: About.xml
Properties/: Constants.props  Metadata.props  Output.props
StreamKit.UX.CodeEditor/: CodeEditor.cs
resources/: manifest.toml
schemas/: content-sources.sql  interactions.sql  products.sql  session-content-sources.sql  session-cooldowns.json5  sessions.sql  user-products.json5  user-sessions.sql  users.sql
scripts/: __main__.py  about.py  corpus.py  deploy.py  environment.py  mods_config.py  probe.py  run_configuration.py
scripts/bootstrap/: __init__.py  logging.py
scripts/data/: base.py  dependency.py  load_folder.py  manifest.py  version.py
scripts/deploy/: __main__.py  comb.py  metadata.py
scripts/manifest/: __main__.py  rw_xml.py
scripts/test/: __main__.py  handler.py  log.py
src/StreamKit.Api/: AssignableEntityType.cs  ComponentRegistry.cs  DrawerRegistry.cs  FilePaths.cs  IAssignableEntity.cs  IComponent.cs  IComponentSettings.cs  IIdentifiable.cs  IMessage.cs  IPlatform.cs  IReputationCalculator.cs  ISettingsDrawer.cs  IUser.cs  (+16 more)
src/StreamKit.Api.Extensions/: RectExtensions.cs  SortOrderExtensions.cs  StringExtensions.cs  Vector2Extensions.cs
(+591 files in other folders)
