[tool.poetry]
name = "rw-streamkit"
version = "0.1.0"
description = ""
authors = ["rando <8146689+SirRandoo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pip = "^23.2.1"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
