[tool.poetry]
name = "rw-streamkit"
version = "0.1.0"
description = ""
authors = ["rando <8146689+SirRandoo@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
vdf = "^3.4"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
